refactor: 상수 관리 방식 변경
- 로또 숫자 범위 및 개수를 Enum으로 관리하던 방식에서 static final 상수 방식으로 변경합니다.
- private 생성자로 인스턴스화를 방지합니다.
- AssertJ 단언으로 변경합니다.