@@ -1,11 +1,11 @@
 package lotto.model;
 
+import static lotto.LottoConstants.Price.LOTTO_PRICE_UNIT;
+
 import java.util.ArrayList;
 import java.util.List;
 
 public class Cashier {
-
-    private static final int LOTTO_PURCHASE_AMOUNT_UNIT = 1_000;
 
     public List<Lotto> payForLotto(int amount) {
         int count = calculateLottoCount(amount);
@@ -22,17 +22,15 @@ public class Cashier {
 
     private int calculateLottoCount(int amount) {
         validateAmount(amount);
-        return amount / LOTTO_PURCHASE_AMOUNT_UNIT;
+        return amount / LOTTO_PRICE_UNIT;
     }
 
     private void validateAmount(int amount) {
         if (isZeroAmount(amount)) {
-            String message = String.format("로또를 구매하려면 최소 %,d원 이상이어야 합니다.", LOTTO_PURCHASE_AMOUNT_UNIT);
-            throw new IllegalArgumentException(message);
+            throw new IllegalArgumentException("로또를 구매하려면 최소 %,d원 이상이어야 합니다.".formatted(LOTTO_PRICE_UNIT));
         }
         if (isNonDivisibleByUnit(amount)) {
-            String message = String.format("로또는 %,d원 단위로 구매할 수 있습니다.", LOTTO_PURCHASE_AMOUNT_UNIT);
-            throw new IllegalArgumentException(message);
+            throw new IllegalArgumentException("로또는 %,d원 단위로 구매할 수 있습니다.".formatted(LOTTO_PRICE_UNIT));
         }
     }
 
@@ -41,6 +39,6 @@ public class Cashier {
     }
 
     private boolean isNonDivisibleByUnit(int amount) {
-        return amount % LOTTO_PURCHASE_AMOUNT_UNIT != 0;
+        return amount % LOTTO_PRICE_UNIT != 0;
     }
 }
